Update benchmark framework and solvers
- Add benchmark_framework_fixed.py with improved functionality
- Update dwave_solver.py, lattice_solver.py, and qiskit_solver.py with latest changes
- Update benchmark_results.json with new results
- Update .gitignore to exclude __pycache__ files
- Remove outdated benchmark_results.json from root

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,15 @@ Desktop.ini
 *.dylib
 build/
 dist/
+
+# Python virtual environments (large dependencies)
+market_split_env/
+market_split_new_env/
+
+# Python cache and compiled files
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
